--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive-Football</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/06d18fb91b.js" crossorigin="anonymous"></script>
+    <!-- ---stylesheet-- -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header></header>
+    <!-- 1st section start -->
+    <section class="container">
+        <div class="tournament">
+            <h1>Conmebol </h1>
+            <h1>Copa America</h1>
+            <h1>2021</h1>
+            <a class="link-button" target="_blank" href="">Watch Live <i class="fas fa-arrow-right"></i></a>
+        </div>
+        <div class="tournament">
+            <img src="images/banner.png" alt="">
+        </div>
+    </section>
+    <!-- 1st section End -->
+
 </body>
+
 </html>
